--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -59,7 +59,15 @@ main section.categories-show {
           opacity: 1.0;
         }
       }
-
+      .soldOut {
+        width: 60%;
+        color: white;
+        background-color: red;
+        padding: 10px;
+        font-size: 1.5em;
+        font-weight: bold;
+        border-radius: 5px 0 20px;
+      }
     }
   }
 }
