--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,28 @@
 <h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+# <p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+<div class="panel panel-default products">
+
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Inventory by</th>
+          <th>Amount</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Products</th>
+          <th><%= @product_count %></th>
+        </tr>
+        <tr>
+          <th>Categories</th>
+          <th><%= @category_count %></th>
+        </tr>
+      </tbody>
+      
+    </table>
+
+  </div>
+
+
